# hab_public_data

./: .dockerignore  .env.example  .gitignore  BACKEND_STARTUP_GUIDE.md  CLAUDE.md  DOCKER_README.md  Dockerfile.streamlit  IMPLEMENTATION_STATUS.md  MVP_TESTING_GUIDE.md  PHASE4_BACKEND_COMPLETE.md  PHASE4_COMPLETE.md  PHASE4_TEST_GUIDE.md  README.md  RUN_TESTS_NOW.md  alembic.ini  app.py  apply_migrations.sh  docker-compose.yml  pyproject.toml  quick_start.sh  requirements-backend.txt  requirements.txt  run_app.sh  test_mvp.sh  test_phase4.sh
.specify/memory/: constitution.md
alembic/: env.py
backend/: .env.example  Dockerfile  config.py  main.py
backend/api/: deps.py
backend/core/: cache.py
backend/db/: base.py  session.py
backend/ml/: model_loader.py
backend/schemas/: chat.py  dataset.py  error.py  prediction.py
backend/services/: analysis_service.py  chat_service.py  dataset_service.py  prediction_service.py
backend/tasks/: __init__.py  prediction_tasks.py
docs/: app_improvement_proposal.md
docs/v1.1.1/: app_improvement_proposal.md  notes.md
docs/v1.1.2/: notes.md
docs/v1.1.3/: app_improvement_proposal.md
docs/v1.2.1/: app_improvement_proposal.md  note.md
docs/v1.2.2/: app_improvement_proposal.md  note.md
docs/v1.2.3/: app_improvement_proposal.md  note.md
docs/v1.2.4/: note.md
docs/v1.2.5/: note.md  (+1 more)
model/: accident_lgbm_model.pkl  feature_config.json  label_encoders.pkl
utils/: __init__.py  backend_client.py  chatbot.py  geo.py  graph.py  loader.py  narration.py  predictor.py  prompts.py  tools.py  visualizer.py
(+30 files in other folders)
